--- a/ui/app/index.html
+++ b/ui/app/index.html
@@ -55,6 +55,7 @@
   <!-- socketjs -->
   <script src="../libs/socket/sockjs-0.3.4.js"></script>
   <script src="../libs/socket/stomp.js"></script>
+  <script src="../libs/angular/base64/base64.js"></script>
 
 <!-- App -->
   <script src="scripts/app.js"></script>
@@ -74,6 +75,7 @@
   <script src="scripts/services/ngstore.js"></script>
   <script src="scripts/services/ui-load.js"></script>
   <script src="scripts/socket.service.js"></script>
+  <script src="scripts/auth.service.js"></script>
 <!--  <script>
 
     function connect() {
